[added] start/pause options for capturing the API requests

--- a/popup/index.html
+++ b/popup/index.html
@@ -14,6 +14,7 @@
     <button id="showUnique" class="bg-green-600 px-3 py-1 rounded">Unique</button>
     <button id="clearBtn" class="bg-red-600 px-3 py-1 rounded">Clear</button>
     <button id="clearFolder" class="bg-red-600 px-3 py-1 rounded">Delete Folders</button>
+    <button id="toggleCaptureBtn" class="bg-yellow-500 px-3 py-1 rounded">Pause Capture</button>
   </div>
 
   <p class="text-white" id="count"></p>
